--- a/templates/tasks/customer-tasks.html
+++ b/templates/tasks/customer-tasks.html
@@ -29,7 +29,7 @@
         <td>{{task.get_urgency}}</td>
         <td class="momdl">{{task.admin_deadline}}</td>
         <td>{{task.review}}</td>
-        <td>{{task.get_payment_status}}</td>
+        <td>{{payments|dget:task.id|default:'Unpaid'}}</td>
         <td>{{task.get_price}}$</td>
     </tr>
     {% endfor %}
