--- a/templates/tasks/details.html
+++ b/templates/tasks/details.html
@@ -53,7 +53,10 @@
                     <br>
                     <i class="fa fa-barcode fa-fw irm"></i><strong>{% trans "Discount" %}</strong>: <em>{{object.discount}}</em>
                     <br>
-                    <i class="fa fa-credit-card fa-fw irm"></i><strong>{% trans "Payment" %}</strong>: <em>{{object.get_payment_status}}</em>
+                    <i class="fa fa-credit-card fa-fw irm"></i><strong>{% trans "Payment" %}</strong>: <em>
+                      {% with payments|dget:object.id as p %}
+                        {{p.0|default:'Unpaid'}}
+                      {% endwith %}</em>
                     <br>
                     <i class="fa fa-money fa-fw irm"></i><strong>{% trans "Price" %}</strong>: <em>{{object.get_price}}$</em>
                     <br>
@@ -76,7 +79,10 @@
                     <br>
                     <i class="fa fa-lock fa-fw irm"></i><strong>{% trans "Revision" %}</strong>: <em>{{object.revision}}</em>
                     <br>
-                    <i class="fa fa-credit-card fa-fw irm"></i><strong>{% trans "Payment" %}</strong>: <em>{{object.get_payment_status}}</em>
+                    <i class="fa fa-credit-card fa-fw irm"></i><strong>{% trans "Payment" %}</strong>: <em>
+                      {% with payments|dget:object.id as p %}
+                        {{p.0|default:'Unpaid'}}
+                      {% endwith %}</em>
                     <br>
                     <i class="fa fa-money fa-fw irm"></i><strong>{% trans "Price" %}</strong>: <em>{{object.get_price}}$</em>
                     <br>
