--- a/static/css/home.css
+++ b/static/css/home.css
@@ -4,17 +4,37 @@ html, body {
     margin: 0px;
     padding: 0px;
 }
+a, button, select, input {
+    outline: 0 !important;
+}
+
 #top-line {
-	font-size: .9em;
-	color: #555;
+    font-size: .9em;
+    color: #555;
+    margin: 0;
+    padding: 4px 0;
 }
 i.rm {
-	margin-right: .5em;
+    margin-right: .5em;
 }
 i.lm {
-	margin-left: .5em;
+    margin-left: .5em;
+}
+a, a:visited {
+    color: #990000;
+}
+a:hover {
+    color: #e73e23;
 }
 
 .lb {
-	border-left: 2px solid #aaa;
+    border-left: 1px dotted #ccc;
+}
+.navbar-default {
+    border-radius: 0;
+    background-color: #fff;
+}
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+    background-color: #990000;
+    color: #fff;
 }
