--- a/templates/html/home.html
+++ b/templates/html/home.html
@@ -22,10 +22,10 @@
     </head>
     <body>
         {% include "html/header.html" %}
-        <div class="conatiner-fluid" style="padding:2.5em 4em 4em">
-        </div>
+        <div class="conatiner-fluid" style="padding:2.5em 4em 4em"></div>
         {% include "html/footer.html" %}
     </body>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js" type="text/javascript"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/home.js" type="text/javascript"></script>
 </html>
