--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,40 +1,213 @@
 html, body {
-    font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
+	font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	height: 100%;
+	margin: 0px;
+	padding: 0px;
 }
 a, button, select, input {
-    outline: 0 !important;
+	outline: 0 !important;
 }
 
 #top-line {
-    font-size: .9em;
-    color: #555;
-    margin: 0;
-    padding: 4px 0;
+	font-size: .9em;
+	color: #555;
+	margin: 0;
+	padding: 4px 0;
 }
 i.rm {
-    margin-right: .5em;
+	margin-right: .5em;
 }
 i.lm {
-    margin-left: .5em;
+	margin-left: .5em;
 }
 a, a:visited {
-    color: #990000;
+	color: #990000;
 }
 a:hover {
-    color: #e73e23;
+	color: #e73e23;
 }
 
 .lb {
-    border-left: 1px dotted #ccc;
+	border-left: 1px dotted #ccc;
 }
 .navbar-default {
-    border-radius: 0;
-    background-color: #fff;
+	border-radius: 0;
+	background-color: #fff;
 }
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-    background-color: #990000;
-    color: #fff;
+	background-color: #990000;
+	color: #fff;
+}
+.big_title {
+	margin: 1em auto;
+	text-transform: uppercase;
+	font-weight: 100;
+	text-align: center;
+	color: #555555;
+}
+.big_title > b {
+	font-weight: 100 !important;
+	color: #E73E23;
+}
+.big_icon {
+	text-align: center;
+}
+.big_icon > i {
+	margin: 1em auto .5em;
+	font-size: 5em;
+}
+i.red {
+	color: #990000;
+}
+i.green {
+	color: #40A040;
+}
+i.yellow {
+	color: #FFC000;
+}
+i.blue {
+	color: #58A0DC;
+}
+div.bar {
+	background-color: #7C858E;
+	color: #fff;
+	margin: 1.5em auto;
+	padding: 1em;
+	font-size: 1.5em;
+	font-weight: 200;
+}
+hr.divider {
+	width: 150px;
+	margin: 2em auto;
+	border: 0;
+	height: 2px;
+	background: #555;
+	background-image: -webkit-linear-gradient(left, #ccc, #555, #ccc);
+	background-image: -moz-linear-gradient(left, #ccc, #555, #ccc);
+	background-image: -ms-linear-gradient(left, #ccc, #555, #ccc);
+	background-image: -o-linear-gradient(left, #ccc, #555, #ccc);
+}
+p {
+	color: #555;
+	font-size: 1.2em;
+	font-weight: 100;
+}
+div.duration > .btn {
+	border-radius: 0;
+}
+.price_holder {
+	width: 100%;
+	border: 4px solid #EFEFEF;
+	box-shadow: 5px 5px 0 #fff;
+}
+.price_holder_hi {
+	width: 100%;
+	border-color: #E84E1C !important;
+	box-shadow: 5px 5px 0 RGBA(232, 78, 28,.4) !important;
+	-webkit-transition: .5s;
+	-moz-transition: .5s;
+	-o-transition: .5s;
+	transition: .5s;
+}
+.bg_hi {
+	background-color: #E84E1C !important;
+	-webkit-transition: .3s;
+	-moz-transition: .3s;
+	-o-transition: .3s;
+	transition: .3s;
+}
+.price_holder > p.control > span {
+	display: block;
+	clear: both;
+}
+.price_holder > p.price {
+	font-weight: 300;
+	padding: 0 0 .5em;
+	font-size: 2.5em;
+	background-color: #FCFEF1;
+	color: #8F977C;
+	margin: 0;
+}
+.price_holder > p.price > a.btn {
+	border-radius: 0;
+	background-color: #8595A2;
+	color: #fff;
+	width: 80%;
+}
+.price_holder > p.price > span {
+	display: block;
+	clear: both;
+	font-size: .4em;
+	margin: .5em 0;
+}
+.price_holder > p.title {
+	background-color: #8595A2;
+	font-weight: 100;
+	padding: .5em;
+	font-size: 1.3em;
+	color: #EFEFEF;
+}
+.price_holder > p.title > span {
+	display: block;
+	clear: both;
+	font-style: italic;
+	font-size: .7em;
+	margin-top: .5em;
+}
+ul.red_bar {
+	margin: 1em 0;
+	overflow: auto;
+}
+ul.red_bar > li {
+	display: block;
+	position: relative;
+	float: left;
+	width: 25%;
+	min-height: 80px;
+	color: #fff;
+	padding: 0;
+}
+ul.red_bar > li > p {
+	font-size: .9em;
+	padding: 1em 2em 1em 5em;
+	color: #fff;
+}
+strong.idigit {
+    bottom: 0;
+    color: green;
+    display: block;
+    font-size: 8em;
+    font-weight: bolder;
+    line-height: 80%;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    right: 0;
+}
+i.icard {
+	padding: .6em 10px 0;
+	font-size: 3em;
+	display: block;
+	float: left;
+}
+ul.red_bar > li > p > span.title {
+	display: inline-block;
+	font-size: 1.2em;
+	font-weight: normal;
+	margin-bottom: .5em;
+}
+li.card1 {
+	background-color: #FF916E;
+}
+li.card2 {
+	background-color: #FC7146;
+	margin-left: -10px;
+}
+li.card3 {
+	background-color: #F75725;
+	margin-left: -10px;
+}
+li.card4 {
+	background-color: #E84E1C;
+	margin-left: -10px;
 }
