--- a/templates/html/home.html
+++ b/templates/html/home.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700&subset=latin,cyrillic-ext,cyrillic" type="text/css">
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" type="text/css">
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" type="text/css">
+        <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap-select.css" type="text/css">
         <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css" type="text/css"> -->
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,10 +23,14 @@
     </head>
     <body>
         {% include "html/header.html" %}
-        <div class="conatiner-fluid" style="padding:2.5em 4em 4em"></div>
+        {% include "html/home_slider.html" %}
+        <div class="conatiner" style="padding:2.5em 4em 4em">
+            {% include "html/home_index.html" %}
+        </div>
         {% include "html/footer.html" %}
     </body>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js" type="text/javascript"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/lib/bootstrap-select.min.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}js/home.js" type="text/javascript"></script>
 </html>
