--- a/templates/html/home_index.html
+++ b/templates/html/home_index.html
@@ -79,13 +79,31 @@
                 </p>
             </li>
             <li class="card2">
-                Card 2
+                <strong class="idigit" style="opacity:.4">2</strong>
+                <i class="fa fa-info icard" style="width:74px;text-align:center;"></i>
+                <p>
+                    <span class="title">Goal Definition</span>
+                    <br>
+                    Provide all information a writer needs  to work on your thesis
+                </p>
             </li>
             <li class="card3">
-                Card 3
+                <strong class="idigit" style="opacity:.3">3</strong>
+                <i class="fa fa-wechat icard"></i>
+                <p>
+                    <span class="title">Goal Definition</span>
+                    <br>
+                    Stay in controll by answering writers' questions and requests
+                </p>
             </li>
             <li class="card4">
-                Card 4
+                <strong class="idigit" style="opacity:.2">4</strong>
+                <i class="fa fa-download icard"></i>
+                <p>
+                    <span class="title">Goal Definition</span>
+                    <br>
+                    Download a custom thesis paper or dissertation
+                </p>
             </li>
         </ul>
         <h1 class="big_title">Our <b>Prices</b></h1>
