--- a/templates/html/footer.html
+++ b/templates/html/footer.html
@@ -1,15 +1,3 @@
-<div class="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-5 col-md-offset-1">
-                Copyright &copy; 2013-{% now "Y" %} name.com All Rights Reserved | name.com
-            </div>
-            <div class="col-md-5" style="text-align:right">
-                We accept: <strong style="font-style:italic;text-shadow: 0 0 2px #000">PayPal</strong>
-            </div>
-        </div>
-    </div>
-</div>
 <footer>
     <div class="container">
         <div class="row">
@@ -17,7 +5,7 @@
                 Copyright &copy; 2013-{% now "Y" %} name.com All Rights Reserved | name.com
             </div>
             <div class="col-md-5" style="text-align:right">
-                We accept: <strong style="font-style:italic;text-shadow: 0 0 2px #000">PayPal</strong>
+                We accept: <strong style="font-size:1.2em;text-shadow: 0 0 2px #000"><em style="padding:2px 1em">PayPal</em>(((((<i class="fa fa-circle-o fa-lg"></i></strong>
             </div>
         </div>
     </div>
