--- a/templates/html/home_index.html
+++ b/templates/html/home_index.html
@@ -82,7 +82,7 @@
                                     <br>
                                     Provide all information a writer needs  to work on your thesis
                                 </p></td>
-                                <td class="card card3"><strong class="idigit" style="opacity:.2; margin-right:-22px">3</strong><i class="fa fa-wechat icard"></i>
+                                <td class="card card3"><strong class="idigit" style="opacity:.2; margin-right:-22px">3</strong><i class="fa fa-wechat icard" style="width:64px;text-align:center;"></i>
                                 <p>
                                     <span class="title">Goal Definition</span>
                                     <br>
