--- a/templates/html/header.html
+++ b/templates/html/header.html
@@ -4,10 +4,10 @@
             <div class="col-md-2">
                 <i class="fa fa-phone rm"></i> +1 123 456 789
             </div>
-            <div class="col-md-2 lb">
+            <div class="col-md-3 lb">
                 <i class="fa fa-envelope-o rm"></i> info@somehost.com
             </div>
-            <div class="col-md-5">
+            <div class="col-md-4">
 
             </div>
             <div class="col-md-1">
@@ -21,7 +21,7 @@
 </div>
 <nav class="navbar navbar-default" role="navigation">
     <div class="container">
-        <div class="navbar-header">
+        <div class="navbar-header" style="width:300px">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
