--- a/templates/html/home.html
+++ b/templates/html/home.html
@@ -23,8 +23,10 @@
     </head>
     <body>
         {% include "html/header.html" %}
-        {% include "html/home_slider.html" %}
-        {% include "html/home_index.html" %}
+        <div class="conatiner" style="padding:2.5em 4em 4em">
+            {% block content %}
+            {% endblock %}
+        </div>
         {% include "html/footer.html" %}
     </body>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
