--- a/templates/html/header.html
+++ b/templates/html/header.html
@@ -14,7 +14,7 @@
                 <a href="{% url 'login'%}">Log In <i class="fa fa-sign-in lm"></i></a>
             </div>
             <div class="col-md-2 lb">
-                <a href="{% url 'login'%}">Registration</a>
+                <a href="{% url 'user_new'%}">Registration</a>
             </div>
         </div>
     </div>
