--- a/templates/userprofile/edit.html
+++ b/templates/userprofile/edit.html
@@ -1,7 +1,67 @@
-{% extends "layout.html" %}
+{% extends "html/home.html" %}
 {% load i18n attr %}
 {% block pagetitle %}{% trans "User Profile" %}{% endblock %}
 {% block content %}
+<div class="row">
+    <div class="col-md-3 col-md-offset-1">
+        <ul class="fa-ul menu-list">
+            <li style="margin-bottom:2em;background:none;">
+                <a href="#" style="color:#333">Home</a><i class="fa fa-angle-right lm rm"></i><span class="active">Register</span>
+            </li>
+            <li>
+                <i class="fa fa-angle-right"></i><a href="#" class="active">Login/Register</a>
+            </li>
+            <li>
+                <i class="fa fa-angle-right"></i><a href="#">Restore Password</a>
+            </li>
+            <li>
+                <i class="fa fa-angle-right"></i><a href="{% if object %}{% url "user_edit" object.pk %}{% else %}{% url 'login' %}{% endif %}">My account</a>
+            </li>
+        </ul>
+    </div>
+    <div class="col-md-6">
+        <h2 class="subtitle" style="margin:2em 0 .5em">Create an account</h2>
+        <h3 style="font-weight:100;text-indent:3em;margin-bottom:1em">Your personal details</h3>
+        <form action="{% url "login" %}" method="post" class="form-horizontal" role="form" id="login-form">
+            {% csrf_token %}
+            {% if not object %}
+            <div class="form-group{% if form.first_name.errors %} has-error{% endif %}"
+            {% if form.first_name.errors %} data-toggle="tooltip" data-placement="left"
+            title="{% trans "Error: First Name field is required" %}"{% endif %}>
+                <label class="col-sm-4 control-label">{% trans "First Name" %} <sup><i class="active fa fa-asterisk lm"></i></sup></label>
+                <div class="col-sm-6">
+                    {{form.first_name|attr:"class:form-control,autocomplete:off,placeholder:Enter a first name"}}
+                </div>
+            </div>
+            <div class="form-group{% if form.username.errors %} has-error{% endif %}">
+                <label for="user_input" class="col-sm-4 control-label">Email <sup><i class="active fa fa-asterisk lm"></i></sup></label>
+                <div class="col-sm-6">
+                    <input type="email" class="form-control" name="username" id="user_input" placeholder="Email">
+                </div>
+            </div>
+            <div class="form-group{% if form.password.errors %} has-error{% endif %}">
+                <label for="passwd_input" class="col-sm-4 control-label">Password <sup><i class="active fa fa-asterisk lm"></i></sup></label>
+                <div class="col-sm-6">
+                    <input type="password" class="form-control" name="password" id="passwd_input" placeholder="Password">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-4 col-sm-6">
+                    <a href="#" class="forget_pass">Forget Password?</a>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-4 col-sm-6">
+                    <button type="submit" class="btn btn-danger submit">
+                        Login
+                    </button>
+                </div>
+            </div>
+            {% endif %}
+        </form>
+    </div>
+</div>
+
 <section class="container-fluid panel panel-default{% if form.errors %} panel-danger{% endif %}" style="width:70%;margin:3em auto 1em">
     <div class="panel-heading">
         <h2 class="panel-title"><i class="fa fa-user fa-lg" style="margin-right:1em"></i> {% trans "User profile" %}{% if object %}: <abbr title="user name">{{form.username.value}}</abbr>{% endif %}</h2>
@@ -9,9 +69,7 @@
     <div class="panel-body">
         <!-- {{form.errors}} -->
         <form role="form" role="form" action="{% if object %}{% url "user_edit" object.pk %}{% else %}
-           {% if request.GET.group_name == co.WRITER_GROUP %}{% url "user_new_writer" %}{% endif %}
-           {% if request.GET.group_name == co.EDITOR_GROUP %}{% url "user_new_editor" %}{% endif %}
-           {% if not request.GET.group_name %}{% url "user_new" %}{% endif %}{% endif %}" method="post" enctype='multipart/form-data'>
+        {% url "user_new" %}{% endif %}" method="post" enctype='multipart/form-data'>
             {% csrf_token %}
             {% if not object %}
             <div class="row">
@@ -181,21 +239,8 @@
                     </div>
                     <div class="row" style="margin-top:2em">
                         <div class="col-md-6">
-                            <a href="{% url 'pswd_reset' %}" type="submit" class="btn btn-default btn-lg" role="button">
-                               <i class='fa fa-key fa-lg' style='margin-right:1em'></i>{% trans "Reset Password" %}</a>
+                            <a href="{% url 'pswd_reset' %}" type="submit" class="btn btn-default btn-lg" role="button"> <i class='fa fa-key fa-lg' style='margin-right:1em'></i>{% trans "Reset Password" %}</a>
                         </div>
-                        <!--
-                        {% if site == 'admin' and object == request.user%}
-                          <div class="col-md-6">
-                              <a href="{% url 'user_new_writer' %}?group_name={{co.WRITER_GROUP}}" type="submit" class="btn btn-default btn-lg" role="button">
-                                 <i class='fa fa-key fa-lg' style='margin-right:1em'></i>{% trans "Add Writer" %}</a>
-                          </div>
-                          <div class="col-md-6">
-                              <a href="{% url 'user_new_editor' %}?group_name={{co.EDITOR_GROUP}}" type="submit" class="btn btn-default btn-lg" role="button">
-                                 <i class='fa fa-key fa-lg' style='margin-right:1em'></i>{% trans "Add Editor" %}</a>
-                          </div>
-                        {% endif %}
-                        -->
                         <div class="col-md-6" style="text-align:right">
                             <button type="submit" class="btn btn-primary btn-lg" role="button">
                                 {% trans "Submit" %}<i class='fa fa-check-circle-o fa-lg' style='margin-left:1em'></i>
@@ -208,9 +253,4 @@
         </form>
     </div>
 </section>
-{% endblock %}
-{% block info_block %}
-<!-- <section class="info">
-<h2>{% trans "Edit Task" %}</h2>
-</section> -->
 {% endblock %}
