--- a/templates/html/header.html
+++ b/templates/html/header.html
@@ -51,8 +51,8 @@
                     <!-- BEGIN TOP BAR MENU -->
                     <div class="col-md-6 col-sm-6 additional-nav">
                         <ul class="pull-right">
-                            <li><a href="login.php">Log In</a></li>
-                            <li><a href="registration.php">Registration</a></li>
+                            <li><a href="{% url 'login' %}">Log In</a></li>
+                            <li><a href="{% url 'user_new' %}">Registration</a></li>
                             <!--
                             
                             // Це меню повинне бути тоді коли, користувач авторизувався
