--- a/templates/general/login.html
+++ b/templates/general/login.html
@@ -2,53 +2,84 @@
 {% load i18n %}
 {% block pagetitle %}Please login{% endblock %}
 {% block content %}
-<div class="row">
-    <div class="col-md-3 col-md-offset-1">
-        <ul class="fa-ul menu-list">
-            <li style="margin-bottom:2em;background:none;">
-                <a href="#" style="color:#333">Home</a><i class="fa fa-angle-right lm rm"></i><span class="active">Login</span>
-            </li>
-            <li>
-                <i class="fa fa-angle-right"></i><a href="#" class="active">Login/Register</a>
-            </li>
-            <li>
-                <i class="fa fa-angle-right"></i><a href="#">Restore Password</a>
-            </li>
-            <li>
-                <i class="fa fa-angle-right"></i><a href="{% if object %}{% url "user_edit" object.pk %}{% else %}{% url 'login' %}{% endif %}">My account</a>
-            </li>
-        </ul>
+<main id="main">
+    <div class="container">
+
+        {% include 'html/nav.html' %}
+
+        <!-- BEGIN CONTENT -->
+        <div class="row">
+
+            <?php include 'include/sidebar-right.php' ?>
+
+            <!-- BEGIN MIDDLE LAYOUT -->
+            <div id="layout-middle" class="col-md-9 col-sm-9">
+
+                <h1 class="page-title">Login</h1>
+
+                <div class="col-md-8 col-sm-8">
+                    <form class="form-horizontal form-without-legend auth-form">
+                        <div class="form-group">
+                            <label class="col-sm-4 control-label">Email <span class="require">*</span></label>
+                            <div class="col-sm-8">
+                                <input type="email" class="form-control" required>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-4 control-label">Password <span class="require">*</span></label>
+                            <div class="col-sm-8">
+                                <input type="password" class="form-control" required>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-sm-8 col-md-offset-4 forgot-link">
+                                <a href="forgot.html">Forget Password?</a>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-sm-8 col-md-offset-4">
+                                <button type="submit" class="btn btn-primary">
+                                    Login
+                                </button>
+                            </div>
+                        </div>
+<!--
+                        <?/*
+
+                        // Тимчасово заморожуємо цей функціонал
+
+                        <div class="row ">
+                            <div class="col-sm-8 col-md-offset-4 login-socio">
+                                <p>
+                                    or login using:
+                                </p>
+                                <ul class="social-icons">
+                                    <li>
+                                        <a href="#" class="facebook" title="Facebook"></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="twitter" title="Twitter"></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="googleplus" title="Google Plus"></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="linkedin" title="Linkedin"></a>
+                                    </li>
+
+                                </ul>
+                            </div>
+                        </div>*/?>
+-->
+                    </form>
+                </div>
+            </div>
+            <!-- END MIDDLE LAYOUT -->
+        </div>
+        <!-- END CONTENT -->
     </div>
-    <div class="col-md-6">
-        <h2 class="subtitle" style="margin-top:3em">Login</h2>
-        <form action="{% url "login" %}" method="post" class="form-horizontal" role="form" id="login-form">
-            {% csrf_token %}
-            <input type="hidden" name="next" value="{{next}}">
-            <div class="form-group{% if form.username.errors %} has-error{% endif %}">
-                <label for="user_input" class="col-sm-4 control-label">Email <sup><i class="active fa fa-asterisk lm"></i></sup></label>
-                <div class="col-sm-6">
-                    <input type="email" class="form-control" name="username" id="user_input" placeholder="Email">
-                </div>
-            </div>
-            <div class="form-group{% if form.password.errors %} has-error{% endif %}">
-                <label for="passwd_input" class="col-sm-4 control-label">Password <sup><i class="active fa fa-asterisk lm"></i></sup></label>
-                <div class="col-sm-6">
-                    <input type="password" class="form-control" name="password" id="passwd_input" placeholder="Password">
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-4 col-sm-6">
-                    <a href="#" class="forget_pass">Forget Password?</a>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-4 col-sm-6">
-                    <button type="submit" class="btn btn-danger submit">
-                        Login
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
+</main>
 {% endblock %}
