--- a/templates/html/footer.html
+++ b/templates/html/footer.html
@@ -1,21 +1,27 @@
-		</div><!--wrap-->
-		<footer id="footer">
-			<div id="copyright" class="blue-copyright">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-6 col-sm-12">Copyright © 2013-2014 name.com All Rights Reserved | <a href="#">name.com</a></div>
-						<div class="col-md-6 col-sm-12 text-right">
-							<span>We accept:</span>
-							<ul class="merchants">
-								<li><a href="#"><img src="{{ STATIC_URL }}images/demo/paypal.png" alt="paypal" title="Paypal"></a></li>
-								<li><a href="#"><img src="{{ STATIC_URL }}images/demo/moneybookers.png" alt="moneybookers" title="Moneybookers"></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-			
-		</footer>
-  		
-  </body>
+</div><!--wrap-->
+<footer id="footer">
+    <div id="copyright" class="blue-copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-sm-12">
+                    Copyright &copy; 2013-2014 name.com All Rights Reserved | <a href="#">name.com</a>
+                </div>
+                <div class="col-md-6 col-sm-12 text-right">
+                    <span>We accept:</span>
+                    <ul class="merchants">
+                        <li>
+                            <a href="#"><img src="{{ STATIC_URL }}images/demo/paypal.png" alt="paypal" title="Paypal"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="{{ STATIC_URL }}images/demo/moneybookers.png" alt="moneybookers" title="Moneybookers"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</footer>
+
+</body>
 </html>
