--- a/templates/general/login.html
+++ b/templates/general/login.html
@@ -10,7 +10,7 @@
         <!-- BEGIN CONTENT -->
         <div class="row">
 
-            <?php include 'include/sidebar-right.php' ?>
+            {% include 'html/sidebar-right.html' %}
 
             <!-- BEGIN MIDDLE LAYOUT -->
             <div id="layout-middle" class="col-md-9 col-sm-9">
@@ -18,24 +18,25 @@
                 <h1 class="page-title">Login</h1>
 
                 <div class="col-md-8 col-sm-8">
-                    <form class="form-horizontal form-without-legend auth-form">
+                    <form  action="{% url "login" %}" method="post" class="form-horizontal form-without-legend auth-form" role="form" id="login-form">
+                        {% csrf_token %}
                         <div class="form-group">
                             <label class="col-sm-4 control-label">Email <span class="require">*</span></label>
                             <div class="col-sm-8">
-                                <input type="email" class="form-control" required>
+                                <input type="email" class="form-control" name="username" id="user_input" placeholder="email" required>
                             </div>
                         </div>
 
                         <div class="form-group">
                             <label class="col-sm-4 control-label">Password <span class="require">*</span></label>
                             <div class="col-sm-8">
-                                <input type="password" class="form-control" required>
+                                <input type="password" class="form-control" name="password" id="passwd_input" placeholder="password" required>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col-sm-8 col-md-offset-4 forgot-link">
-                                <a href="forgot.html">Forget Password?</a>
+                                <a href="{% url 'pswd_reset' %}">Forget Password?</a>
                             </div>
                         </div>
 
@@ -46,34 +47,34 @@
                                 </button>
                             </div>
                         </div>
-<!--
+                        <!--
                         <?/*
 
                         // Тимчасово заморожуємо цей функціонал
 
                         <div class="row ">
-                            <div class="col-sm-8 col-md-offset-4 login-socio">
-                                <p>
-                                    or login using:
-                                </p>
-                                <ul class="social-icons">
-                                    <li>
-                                        <a href="#" class="facebook" title="Facebook"></a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="twitter" title="Twitter"></a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="googleplus" title="Google Plus"></a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="linkedin" title="Linkedin"></a>
-                                    </li>
+                        <div class="col-sm-8 col-md-offset-4 login-socio">
+                        <p>
+                        or login using:
+                        </p>
+                        <ul class="social-icons">
+                        <li>
+                        <a href="#" class="facebook" title="Facebook"></a>
+                        </li>
+                        <li>
+                        <a href="#" class="twitter" title="Twitter"></a>
+                        </li>
+                        <li>
+                        <a href="#" class="googleplus" title="Google Plus"></a>
+                        </li>
+                        <li>
+                        <a href="#" class="linkedin" title="Linkedin"></a>
+                        </li>
 
-                                </ul>
-                            </div>
+                        </ul>
+                        </div>
                         </div>*/?>
--->
+                        -->
                     </form>
                 </div>
             </div>
@@ -82,4 +83,5 @@
         <!-- END CONTENT -->
     </div>
 </main>
+{% include 'html/footer.html' %}
 {% endblock %}
