--- a/templates/general/password_reset_form.html
+++ b/templates/general/password_reset_form.html
@@ -1,32 +1,45 @@
-{% extends "layout.html" %}
+{% extends "html/home.html" %}
 {% load i18n attr %}
-{% block pagetitle %}All Tasks{% endblock %}
-
+{% block pagetitle %}Reset password{% endblock %}
 {% block content %}
+<main id="main">
+    <div class="container">
 
-<p>
-    {% trans "Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one." %}
-</p>
-<form action="{% url "pswd_reset" %}" method="post" class="form-horizontal" role="form">
-    {% csrf_token %}
-    {{ form.email.errors }}
-    <div class="form-group">
-        <div class="col-sm-5">
-            <div class="input-group margin-bottom-sm">
-                <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
-                {{ form.email|attr:"class:form-control,placeholder:Email address" }}
+        {% include 'html/nav.html' %}
+
+        <!-- BEGIN CONTENT -->
+        <div class="row">
+
+            {% include 'html/sidebar-right.html' %}
+
+            <!-- BEGIN MIDDLE LAYOUT -->
+            <div id="layout-middle" class="col-md-9 col-sm-9">
+
+                <h1 class="page-title">Forgot Your Password?</h1>
+                <div class="col-md-8 col-sm-8">
+                    <form action="{% url "pswd_reset" %}" method="post" id="forgot-form" class="form-horizontal form-without-legend">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <label class="col-sm-4 control-label">Email</label>
+                            <div class="col-sm-8">
+                                {{ form.email|attr:"class:form-control,placeholder:Email address" }}
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-4 control-label">&nbsp;</label>
+                            <div class="col-sm-8">
+                                <button type="submit" class="btn btn-primary">
+                                    Send
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
+            <!-- END MIDDLE LAYOUT -->
         </div>
-        <div class="col-sm-7">
-            <button type="submit" class="btn btn-primary">
-                {% trans 'Reset my password' %} <i class="fa fa-arrow-circle-o-right"></i>
-            </button>
-        </div>
+        <!-- END CONTENT -->
     </div>
-</form>
-{% endblock %}
-{% block info_block %}
-<section class="info">
-    <h3>{% trans "Password reset" %} {{user.username}}</h3>
-</section>
+</main>
+{% include 'html/footer.html' %}
 {% endblock %}
