--- a/templates/html/sidebar-right.html
+++ b/templates/html/sidebar-right.html
@@ -2,9 +2,9 @@
 <div id="layout-right" class="col-md-3 col-sm-12">
 	<section class="sibebar-section">
 		<ul class="list-group">
-			<li class="list-group-item active"><a href="#">Log In</a></li>
-			<li class="list-group-item"><a href="#">Registration</a></li>
-			<li class="list-group-item"><a href="#">Restore Password</a></li>
+			<li class="list-group-item active"><a href="{% url 'login' %}">Log In</a></li>
+			<li class="list-group-item"><a href="{% url 'user_new' %}">Registration</a></li>
+			<li class="list-group-item"><a href="{% url 'pswd_reset' %}">Restore Password</a></li>
 		</ul>
 	</section>
 </div>
