--- a/templates/userprofile/_edit.html
+++ b/templates/userprofile/_edit.html
@@ -2,19 +2,24 @@
 {% load i18n attr %}
 {% block pagetitle %}{% trans "User Profile" %}{% endblock %}
 {% block content %}
-<main id="main">
-    <div class="container">
-
-        {% include 'html/nav.html' %}
-
-        <!-- BEGIN CONTENT -->
-        <div class="row">
-
-            {% include 'html/sidebar-right.html' %}
-
-            <!-- BEGIN MIDDLE LAYOUT -->
-            <div id="layout-middle" class="col-md-9 col-sm-9">
-
+<div class="row">
+    <div class="col-md-3 col-md-offset-1">
+        <ul class="fa-ul menu-list">
+            <li style="margin-bottom:2em;background:none;">
+                <a href="#" style="color:#333">Home</a><i class="fa fa-angle-right lm rm"></i><span class="active">Register</span>
+            </li>
+            <li>
+                <i class="fa fa-angle-right"></i><a href="#" class="active">Login/Register</a>
+            </li>
+            <li>
+                <i class="fa fa-angle-right"></i><a href="#">Restore Password</a>
+            </li>
+            <li>
+                <i class="fa fa-angle-right"></i><a href="{% if object %}{% url "user_edit" object.pk %}{% else %}{% url 'login' %}{% endif %}">My account</a>
+            </li>
+        </ul>
+    </div>
+    <div class="col-md-6">
         <h2 class="subtitle" style="margin:2em 0 .5em">Create an account</h2>
         <h3 style="font-weight:100;text-indent:3em;margin-bottom:1em">Your personal details</h3>
         <form action="{% url "login" %}" method="post" class="form-horizontal" role="form" id="login-form">
