--- a/templates/tasks/customer-tasks.html
+++ b/templates/tasks/customer-tasks.html
@@ -10,7 +10,7 @@
         <th class="sorter-text">{% trans 'Urgency' %}</th>
         <th class="sorter-text">{% trans 'Deadline' %}</th>
         <th class="sorter-text">{% trans 'Revision' %}</th>
-        <th class="sorter-text">{% trans 'Payment status' %}</th>
+        <th class="sorter-text">{% trans 'Status' %}</th>
         <th class="sorter-text">{% trans 'Price' %}</th>
     </tr>
 </thead>
