--- a/templates/tasks/delete.html
+++ b/templates/tasks/delete.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "html/home.html" %}
 {% load i18n %}
 {% block pagetitle %}{% trans "Task Details" %}{% endblock %}
 {% block content %}
