--- a/templates/tasks/edit.html
+++ b/templates/tasks/edit.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "html/home.html" %}
 {% load i18n attr %}
 {% block pagetitle %}
   {% if object and object.status == co.DRAFT %}
