--- a/templates/general/login.html
+++ b/templates/general/login.html
@@ -15,7 +15,7 @@
             <!-- BEGIN MIDDLE LAYOUT -->
             <div id="layout-middle" class="col-md-9 col-sm-9">
 
-                <h1 class="page-title">Login</h1>
+                <h1 class="page-title">Login!</h1>
 
                 <div class="col-md-8 col-sm-8">
                     <form  action="{% url "login" %}" method="post" class="form-horizontal form-without-legend auth-form" role="form" id="login-form">
@@ -23,7 +23,7 @@
                         <div class="form-group">
                             <label class="col-sm-4 control-label">Email <span class="require">*</span></label>
                             <div class="col-sm-8">
-                                <input type="email" class="form-control" name="username" id="user_input" placeholder="email" required>
+                                <input type="text" class="form-control" name="username" id="user_input" placeholder="email" required>
                             </div>
                         </div>
 
