--- a/templates/tasks/details.html
+++ b/templates/tasks/details.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "html/header.html" %}
 {% load i18n render_status %}
 {% block pagetitle %}
   {% if object and object.status == co.DRAFT %}
@@ -21,8 +21,11 @@
 </section>
 {% endblock %}
 {% block content %}
-<section class="container-fluid task-details" style="margin: 0 auto">
-    <div class="row">
+<main id="main">
+    <div class="container">
+
+<!-- <section class="container-fluid task-details" style="margin: 0 auto"> -->
+      <div class="row">
         <div class="col-md-3">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -549,13 +552,18 @@
   </div>
   {% endif %}
 {% endif %}
+</main>
+{% include 'html/footer.html' %}
 {% endblock %}
 {% block styles %}
 <link rel="stylesheet" href="{{ STATIC_URL }}css/mbExtruder.css" type="text/css">
 {% endblock %}
 {% block scripts %}
+<script src="{{ STATIC_URL }}js/lib/jquery.sprintf.min.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/lib/bootstrap.file-input.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/lib/bootbox.min.js" type="text/javascript"></script>
 <script src="{{ STATIC_URL }}js/lib/jquery.hoverIntent.min.js" type="text/javascript"></script>
 <script src="{{ STATIC_URL }}js/lib/jquery.mb.flipText.js" type="text/javascript"></script>
 <script src="{{ STATIC_URL }}js/lib/mbExtruder.js" type="text/javascript"></script>
-<script src="{{ STATIC_URL }}js/panels.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/app.js" type="text/javascript"></script>
 {% endblock %}
