--- a/templates/tasks/index.html
+++ b/templates/tasks/index.html
@@ -1,12 +1,15 @@
-{% extends "layout.html" %}
+{% extends "html/header.html" %}
 {% load i18n %}
-{% block pagetitle %}Tasks{% endblock %}
+{% block pagetitle %}Orders{% endblock %}
 {% block info_block %}
 <section class="info">
     <h2><i class="fa fa-tasks irm"></i> {% trans "Tasks List" %} <small style="color:#333;margin-left:0.5em">{{action_label}} <sup><span class="badge" style="font-size:.6em;text-shadow:none;margin-left:.5em;background-color:#08F">{{tasks|length}}</span></sup></small></h2>
 </section>
 {% endblock %}
 {% block content %}
+<main id="main">
+    <div class="container">
+
 {% if tasks %}
 <div class="row">
     {{ PATH_IFNO }}
@@ -19,6 +22,17 @@
     </div>
 </div>
 {% endif  %}
+    </div>
+</main>
+{% include 'html/footer.html' %}
+{% endblock %}
+{% block scripts %}
+<script src="{{ STATIC_URL }}js/lib/jquery.sprintf.min.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/lib/bootstrap.file-input.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/lib/bootbox.min.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/lib/jquery.tablesorter.min.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/lib/jquery.tablesorter.widgets.min.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/app.js" type="text/javascript"></script>
 {% endblock %}
 {% block styles %}
 <link rel="stylesheet" href="{{ STATIC_URL }}css/theme.default.css" type="text/css">
