--- a/templates/html/footer.html
+++ b/templates/html/footer.html
@@ -1,27 +1,41 @@
-</div><!--wrap-->
-<footer id="footer">
-    <div id="copyright" class="blue-copyright">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-sm-12">
-                    Copyright &copy; 2013-2014 name.com All Rights Reserved | <a href="#">name.com</a>
-                </div>
-                <div class="col-md-6 col-sm-12 text-right">
-                    <span>We accept:</span>
-                    <ul class="merchants">
-                        <li>
-                            <a href="#"><img src="{{ STATIC_URL }}images/demo/paypal.png" alt="paypal" title="Paypal"></a>
-                        </li>
-                        <li>
-                            <a href="#"><img src="{{ STATIC_URL }}images/demo/moneybookers.png" alt="moneybookers" title="Moneybookers"></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+<footer id="footer" class="black-footer">
+
+  <div class="container">
+    <div class="row">
+     <div class="col-md-6 col-sm-6">
+      <section>
+       <span class="block-title">Essay <span>Online</span></span>
+       <p>Are there times when you have multiple assignments from different classes that are due all around the same times? Are there times when you feel like you are just too swamped with all of the school work that you have to do? Are you worried about your GPA because there are times when you do not get all of your work completed for lack of time? If you answered "yes" to these questions, then you are not the only one. Many students get weighed down with their school work, but many of them have also found help with their assignments, particularly with their essays. How do they do it? They buy essay online help. This solves their dilemmas of having way too much work to do and not enough time to do it.</p>
+      </section>
+     </div>
+
+     <div class="col-md-6 col-sm-6">
+      <section>
+       <span class="block-title">Online Essay <span>Writing Services</span></span>
+       <p>There are several essay writing services where you can buy essays online. You should just be sure to choose the most qualified service, so that you will get the best assignment for the best price. All essay writing services are not all the same. Be sure to do some research and ask questions before you use a particular service, so that you are not scammed.</p>       
+      </section>
+
+      <section>
+       <span class="block-title">Writing <span>Essays</span></span>
+       <p>Writing essays is a necessary part of your academic curriculum and they can be a problem, especially if you do not have the time to do them, or if you are not yet experienced enough to produce essays with the type of quality you want. The answer to your essay writing problems will cease if you buy essay help on the Internet.</p>
+      </section>
+     </div>
     </div>
+   </div>
+
+  <div id="copyright">
+    <div class="container">
+     <div class="row">
+      <div class="col-md-6 col-sm-12">Copyright © 2013-2014 name.com All Rights Reserved | <a href="#">name.com</a></div>
+      <div class="col-md-6 col-sm-12 text-right">
+       <span>We accept:</span>
+       <ul class="merchants">
+        <li><a href="#"><img src="{{ STATIC_URL }}images/demo/paypal.png" alt="paypal" title="Paypal"></a></li>
+        <li><a href="#"><img src="{{ STATIC_URL }}images/demo/moneybookers.png" alt="moneybookers" title="Moneybookers"></a></li>
+       </ul>
+      </div>
+     </div>
+    </div>
+  </div>
 
 </footer>
-
-</body>
-</html>
