--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,71 +1,62 @@
-<main id="main">
-	<div class="container">	
+{% extends 'index.html' %}
 
-		{% include 'include/nav.html' %}
+{% block breadcrump %}
+<div class="breadcrumbs">
+  <a href="#">Home</a>
+  <span class="separator"><i class="fa fa-angle-right"></i></span>
+  <a href="#">Blog</a>
+  <span class="separator"><i class="fa fa-angle-right"></i></span>
+  <a href="#" class="active">Dissertation Online</a>
+</div>
+{% endblock %}
 
-		<!-- BEGIN CONTENT -->
-		<div class="row">
+{% block sidebar_right %}
+<div id="layout-right" class="col-md-3 col-sm-12">
+  <section class="sibebar-section">
+    <ul class="list-group">
+      <li class="list-group-item active"><a href="login">Log In</a></li>
+      <li class="list-group-item"><a href="registration">Registration</a></li>
+      <li class="list-group-item"><a href="forgot">Restore Password</a></li>
+    </ul>
+  </section>
+</div>
+{% endblock %}
 
-			{% include '../html/sidebar-left.html' %}
-
-			<!-- BEGIN MIDDLE LAYOUT -->
-			<div id="layout-middle" class="col-md-9 col-sm-9">
-			
-				<h1 class="page-title">Login</h1>
-				
-				<div class="col-md-8 col-sm-8">
-					<form action="login" method="post" class="form-horizontal form-without-legend auth-form">
-					
-						<div class="form-group {# has-error #}">
-							<label class="col-sm-4 control-label">Email <span class="require">*</span></label>
-							<div class="col-sm-8">
-								<input type="email" name="email" class="form-control" required>
-							</div>
-						</div>
-
-						<div class="form-group {# has-error #}">
-							<label class="col-sm-4 control-label">Password <span class="require">*</span></label>
-							<div class="col-sm-8">
-								<input type="password" name="password" class="form-control" required>
-								
-								{# <span class="validation-message">Не вірний логін або пароль</span> #}
-								
-							</div>
-						</div>
-
-						<div class="row">
-							<div class="col-sm-8 col-md-offset-4 forgot-link">
-								<a href="forgot">Forget Password?</a>
-							</div>
-						</div>
-						
-						<div class="form-group">
-							<div class="col-sm-8 col-md-offset-4">
-								<button type="submit" name="send_auth" class="btn btn-primary">Login</button>
-							</div>
-						</div>
-
-						{% comment %}
-						// Тимчасово заморожуємо цей функціонал
-						<div class="row ">
-							<div class="col-sm-8 col-md-offset-4 login-socio">
-								<p>or login using:</p>
-								<ul class="social-icons">
-									<li><a href="#" class="facebook" title="Facebook"></a></li>
-									<li><a href="#" class="twitter" title="Twitter"></a></li>
-									<li><a href="#" class="googleplus" title="Google Plus"></a></li>
-									<li><a href="#" class="linkedin" title="Linkedin"></a></li>
-									
-								</ul>
-							</div>
-						</div>
-						{% endcomment %}
-						
-					</form>
-				</div>
-			</div>
-			<!-- END MIDDLE LAYOUT -->
-		</div>
-		<!-- END CONTENT -->
-	</div>		
-</main>
+{% block content %}
+<div id="layout-middle" class="col-md-9 col-sm-9">
+ <h1 class="page-title">Login</h1>
+ <div class="col-md-8 col-sm-8">
+  <form action="{% url "login" %}" method="post" class="form-horizontal form-without-legend auth-form">
+   {% csrf_token %}
+   <div class="form-group {% if form.username.error %}has-error{% endif %}">
+    <label class="col-sm-4 control-label">Username <span class="require">*</span></label>
+    <div class="col-sm-8">
+     <input type="text" name="username" class="form-control" required>
+    </div>
+   </div>
+   <div class="form-group {% if form.password.errors %}has-error{% endif %}">
+    <label class="col-sm-4 control-label">Password <span class="require">*</span></label>
+    <div class="col-sm-8">
+     <input type="password" name="password" class="form-control" required>
+     {% if form.errors %}
+       {% for k, error in form.errors.items %}
+         <span class="validation-message">{{error}}</span>
+       {% endfor %}
+     {% endif %}
+    </div>
+   </div>
+   <div class="row">
+    <div class="col-sm-8 col-md-offset-4 forgot-link">
+     <a href="forgot">Forget Password?</a>
+    </div>
+   </div>
+   
+   <div class="form-group">
+    <div class="col-sm-8 col-md-offset-4">
+     <button type="submit" name="send_auth" class="btn btn-primary">Login</button>
+    </div>
+   </div>
+  </form>
+ </div>
+</div>
+{% endblock %}
