--- a/templates/html/header.html
+++ b/templates/html/header.html
@@ -12,11 +12,11 @@
               <!-- BEGIN TOP BAR MENU -->
               <div class="col-md-6 col-sm-6 additional-nav">
         <ul class="pull-right">
-          {% if request.user.is_autheticated %}
+          {% if request.user.is_authenticated %}
             <li><a href="my-orders">My Orders</a></li>
-            <li><a href="exit">Exit</a></li>
+            <li><a href="{% url 'logout' %}">Exit</a></li>
           {% else %}
-            <li><a href="login">Log In</a></li>
+            <li><a href="{% url 'login' %}">Log In</a></li>
             <li><a href="registration">Registration</a></li>
           {% endif %}
         </ul>
